@@ -37,6 +37,7 @@ export(collapseNodes)
 export(compareNodeAges)
 export(compareTermBranches)
 export(constrainParPaleo)
+export(createMrBayesConstraints)
 export(dateNodes)
 export(deadTree)
 export(degradeTree)
