@@ -25,6 +25,8 @@ Version - 2.5 -
 -Added argument to multiDiv that allows for control of line type
 -Modified taxa2phylo so root.time is added before plotting
 -Removed erroneous, incorrect references to Hartmann et al. 2011 from simFossilTaxa; this effect is now properly accounted for by simFossilRecord
+-Added function createMrBayesConstraints to convert a topology to a list of topological constraint commands for MrBayes
+-
 
 Version - 2.4 - 05-01-15
 -Modified timePaleoPhy help file to clarify 'these are not realistic time-scaling functions' statement and correcting an 'either' to 'neither' in the description of argument 'ntrees'
